--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
             <artifactId>WebCollector</artifactId>
             <version>2.73-alpha</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.8.10</version>
+        </dependency>
+
     </dependencies>
 
 
